--- a/lesson.html
+++ b/lesson.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ammar test">
     <meta property="og:title" content="Ammar website">
-    <meta property="og:img" content="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/Google_Chrome_icon_%28February_2022%29.svg/640px-Google_Chrome_icon_%28February_2022%29.svg.png">
-    <meta property="og:dsecription" content="FRontend developer">
+    <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/Google_Chrome_icon_%28February_2022%29.svg/640px-Google_Chrome_icon_%28February_2022%29.svg.png">
+    <meta property="og:description" content="FRontend developer">
     <link rel="stylesheet" href="Css2.css">
     <title> Course 2</title>
 </head>
